--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 			<groupId>org.squirrelframework</groupId>
 			<artifactId>squirrel-foundation</artifactId>
 			<version>0.3.8</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
