--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=root
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo?useUnicode=true&characterEncoding=utf8
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.password=123456
+spring.datasource.druid.username=root
 
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
